--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Proyek Notes API dengan menerapkan plugin",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-dev": "nodemon ./src/server.js",
+    "lint": "eslint ./src --fix"
   },
   "repository": {
     "type": "git",
@@ -18,9 +20,11 @@
   "homepage": "https://github.com/kuukuuuruyuk/notes-app-back-end#readme",
   "devDependencies": {
     "eslint": "^8.23.0",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-google": "^0.14.0",
+    "nodemon": "^2.0.19"
   },
   "dependencies": {
-    "@hapi/hapi": "^20.2.2"
+    "@hapi/hapi": "^20.2.2",
+    "nanoid": "^2.1.11"
   }
 }
