--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start-prod": "NODE_ENV=production node ./src/server.js",
     "start-dev": "nodemon ./src/server.js",
     "lint": "eslint ./src --fix"
   },
@@ -21,6 +22,7 @@
   "devDependencies": {
     "eslint": "^8.23.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.19"
   },
   "dependencies": {
